Connection / Queue / Task 추가

--- a/Myon - CLIENT/.classpath
+++ b/Myon - CLIENT/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/Utilities/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j2"/>
+	<classpathentry kind="lib" path="E:/git/Myon_CLIENT/Myon - CLIENT/build/lib/message.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
